--- a/.github/ci.yml
+++ b/.github/ci.yml
@@ -13,37 +13,31 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout the code
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      # Step 2: Set up Python
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.9'
 
-      # Step 3: Install dependencies
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      # Step 4: Run linting
       - name: Run linting
         env:
           PYTHONPATH: ./src
         run: |
           pip install pylint
-          pylint src/ || true  # Ensures linting warnings don't fail the pipeline
+          pylint src/ || true  # Avoids failure due to lint warnings
 
-      # Step 5: Run tests
       - name: Run tests
         run: |
           pip install pytest
-          pytest || true  # Ensures test failures don't break the pipeline
+          pytest || true  # Avoids failure due to test warnings
 
-      # Step 6: Build the application
       - name: Build application
         run: |
           echo "Build step placeholder"
